--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-notify": "^3.0.0",
+    "gulp-sass": "^3.1.0",
     "http": "0.0.0",
     "jade": "^1.11.0",
     "morgan": "~1.6.1",
