--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-sass": "^3.1.0",
     "http": "0.0.0",
     "jade": "^1.11.0",
+    "mocha": "^5.0.0",
     "morgan": "~1.6.1",
     "mysql": "^2.14.1",
     "orm": "^3.2.4",
