--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "author": "CHANEL",
   "scripts": {
     "start": "node dist/app.js",
-    "test": "mocha",
+    "test": "mocha --compilers js:babel-core/register ./test/**/*.spec.js",
     "build": "gulp build",
     "dev": "gulp clean && gulp",
     "clean": "gulp clean"
   },
   "dependencies": {
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "~1.13.2",
     "chai": "^4.1.1",
+    "chai-http": "^3.0.0",
     "cookie-parser": "~1.3.5",
     "dateformat": "^2.0.0",
     "debug": "~2.2.0",
