feat(translation): add translation system

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dateformat": "^2.0.0",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-translate": "^0.4.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
@@ -31,6 +32,7 @@
     "gulp-sass": "^3.1.0",
     "http": "0.0.0",
     "jade": "^1.11.0",
+    "locale": "^0.1.0",
     "mocha": "^5.0.0",
     "morgan": "~1.6.1",
     "mysql": "^2.14.1",
